--- a/Base/app/src/main/res/values/strings.xml
+++ b/Base/app/src/main/res/values/strings.xml
@@ -4,5 +4,8 @@
     <string name="app_name">Base</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+    <string name="title_activity_touch_base">TouchBaseActivity</string>
+    <string name="fine"> I\'m Fine</string>
+    <string name="help">Come Save Me!</string>
 
 </resources>
